samples/_failures_safe/1761322329_714e92_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d2c5c87a.c: In function ‘main’:
./samples/SAFE/__tmp_d2c5c87a.c:158:33: error: expected ‘;’ at end of input
  158 |                     print_matrix
      |                                 ^
      |                                 ;
./samples/SAFE/__tmp_d2c5c87a.c:158:21: error: expected declaration or statement at end of input
  158 |                     print_matrix
      |                     ^~~~~~~~~~~~
./samples/SAFE/__tmp_d2c5c87a.c:158:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d2c5c87a.c:158:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d2c5c87a.c:158:21: error: expected declaration or statement at end of input
